[package]
name = "minisql"
version = "0.1.0"
edition = "2021"
authors = ["Elias Rohrer <dev@tnull.de>"]
license = "MIT OR Apache-2.0"
rust-version = "1.63.0"
description = "A minimal SQLite implementation."
repository = "https://github.com/tnull/minisql"
readme = "README.md"
keywords = ["sql", "sqlite"]
categories = ["database"]

[features]
#sqlite = ["libsqlite3-sys"]
sqlite-bundled = ["libsqlite3-sys/bundled"]
#sqlite-sqlcipher = ["libsqlite3-sys/sqlcipher"]
sqlite-bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher"]
sqlite-bundled-windows = ["libsqlite3-sys/bundled-windows"]

[dependencies]
libsqlite3-sys = { version = "0.30.1", default-features = false, features = ["min_sqlite_version_3_14_0"], optional = true }
